--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Syntax-Highlight-Engine-Simple-HTML
 
+0.0.2  Sat Jul 13 15:33:25 2008
+	
+	-Change syntax format. allowed_container(array) abolished and
+		container(string) adopted.
+	-Fix POD
+
 0.0.1  Sat Jul 12 15:33:25 2008
-       Initial release.
+	
+	Initial release.
 
